# librender

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
scripts/: build-prod.sh  build.sh  test.sh
src/: CMakeLists.txt  annotation.cc  annotation.h  config.cc  config.h  controls.cc  controls.h  databuffer.cc  databuffer.h  debug.h  framebuffer.cc  framebuffer.h  gl_buffer.cc  gl_buffer.h  gl_object.cc  gl_object.h  graphics.cc  graphics.h  gui.cc  gui.h  io.cc  io.h  librender.cc  librender.h  line_shader_object.cc  line_shader_object.h  main.cc  main.h  matrix_util.h  mesh.cc  mesh.h  mesh_loader.cc  mesh_loader.h  mesh_util.h  scry.cc  scry.h  scry_object.h  shader.cc  shader.h  shader_object.cc  (+6 more)
src/shaders/: blinn_shader.h  line_shader.h  shader_source.h  simple_shader.h  standard_shader.h  trimesh_normal_shader.h  trimesh_shape_shader.h
src/shaders/glsl/: blinn.f.glsl  blinn.v.glsl  gen_h.py  line.glsl  simple.f.glsl  simple.v.glsl  trimesh_normal.glsl  trimesh_shape.glsl
test/: CMakeLists.txt  test_mesh_loader.cc  test_mesh_util.cc
test/resources/: sample.yaml
